avfilter/vf_tiltandshift: fix buffer offset for yuv422p input

Fixes ticket #10950.

Signed-off-by: James Almer <jamrial@gmail.com>